--- a/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App.New/Templates/CSharpCode.liquid
+++ b/CodeGeneration.Selenium.App/CodeGeneration.Selenium.App.New/Templates/CSharpCode.liquid
@@ -186,7 +186,7 @@ namespace Selenium.Testing.PageObjects
             }
             catch (NoSuchElementException e) 
             {
-                Assert.Warn($"Selenium could not find the element {{Inputs.Id}}")
+                Assert.Warn($"Selenium could not find the element {{Inputs.Id}}");
             }
             catch (StaleElementReferenceException) 
             {
@@ -212,7 +212,7 @@ namespace Selenium.Testing.PageObjects
             }
             catch (NoSuchElementException e) 
             {
-                Assert.Warn($"Selenium could not find the element {{Inputs.Id}}")
+                Assert.Warn($"Selenium could not find the element {{Inputs.Id}}");
             }
             catch (StaleElementReferenceException) 
             {
@@ -242,7 +242,7 @@ namespace Selenium.Testing.PageObjects
             }
             catch (NoSuchElementException e) 
             {
-                Assert.Warn($"Selenium could not find the element {{Inputs.Id}}")
+                Assert.Warn($"Selenium could not find the element {{Inputs.Id}}");
             }
             catch (StaleElementReferenceException) 
             {
@@ -274,7 +274,7 @@ namespace Selenium.Testing.PageObjects
             }
             catch (NoSuchElementException e) 
             {
-                Assert.Warn($"Selenium could not find the element {{TextAreas.Id}}")
+                Assert.Warn($"Selenium could not find the element {{TextAreas.Id}}");
             }
             catch (StaleElementReferenceException) 
             {
@@ -300,7 +300,7 @@ namespace Selenium.Testing.PageObjects
             }
             catch (NoSuchElementException e) 
             {
-                Assert.Warn($"Selenium could not find the element {{Links.Id}}")
+                Assert.Warn($"Selenium could not find the element {{Links.Id}}");
             }
             catch (StaleElementReferenceException) 
             {
@@ -326,7 +326,7 @@ namespace Selenium.Testing.PageObjects
             }
             catch (NoSuchElementException e) 
             {
-                Assert.Warn($"Selenium could not find the element {{Buttons.Id}}")
+                Assert.Warn($"Selenium could not find the element {{Buttons.Id}}");
             }
             catch (StaleElementReferenceException) 
             {
@@ -370,7 +370,7 @@ namespace Selenium.Testing.PageObjects
             }
             catch (NoSuchElementException e) 
             {
-                Assert.Warn($"Selenium could not find the element {{Selects.Id}}")
+                Assert.Warn($"Selenium could not find the element {{Selects.Id}}");
             }
             catch (StaleElementReferenceException) 
             {
